vlib/v/checker/tests/mod_op_wrong_type_err.out
vlib/v/checker/tests/mod_op_wrong_type_err.vv:4:10: error: float modulo not allowed, use math.fmod() instead
    2 | 
    3 | fn main() {
    4 |     println(0.5 % 1)
      |             ~~~
    5 |     println(1 % 0.5)
    6 |     println([1, 2, 3] % 1)
vlib/v/checker/tests/mod_op_wrong_type_err.vv:5:14: error: float modulo not allowed, use math.fmod() instead
    3 | fn main() {
    4 |     println(0.5 % 1)
    5 |     println(1 % 0.5)
      |                 ~~~
    6 |     println([1, 2, 3] % 1)
    7 |     println(1 % [1, 2, 3])
vlib/v/checker/tests/mod_op_wrong_type_err.vv:6:10: error: mismatched types `[]int` and `int literal`
    4 |     println(0.5 % 1)
    5 |     println(1 % 0.5)
    6 |     println([1, 2, 3] % 1)
      |             ~~~~~~~~~~~~~
    7 |     println(1 % [1, 2, 3])
    8 |     a := Aaa{}
vlib/v/checker/tests/mod_op_wrong_type_err.vv:6:10: error: infix expr: cannot use `int literal` (right expression) as `[]int`
    4 |     println(0.5 % 1)
    5 |     println(1 % 0.5)
    6 |     println([1, 2, 3] % 1)
      |             ~~~~~~~~~~~~~
    7 |     println(1 % [1, 2, 3])
    8 |     a := Aaa{}
vlib/v/checker/tests/mod_op_wrong_type_err.vv:7:10: error: mismatched types `int literal` and `[]int`
    5 |     println(1 % 0.5)
    6 |     println([1, 2, 3] % 1)
    7 |     println(1 % [1, 2, 3])
      |             ~~~~~~~~~~~~~
    8 |     a := Aaa{}
    9 |     println(a % 1)
vlib/v/checker/tests/mod_op_wrong_type_err.vv:7:10: error: infix expr: cannot use `[]int` (right expression) as `int literal`
    5 |     println(1 % 0.5)
    6 |     println([1, 2, 3] % 1)
    7 |     println(1 % [1, 2, 3])
      |             ~~~~~~~~~~~~~
    8 |     a := Aaa{}
    9 |     println(a % 1)
vlib/v/checker/tests/mod_op_wrong_type_err.vv:9:10: error: mismatched types `Aaa` and `int literal`
    7 |     println(1 % [1, 2, 3])
    8 |     a := Aaa{}
    9 |     println(a % 1)
      |             ~~~~~
   10 |     println(1 % a)
   11 |     b := map[string]int{}
vlib/v/checker/tests/mod_op_wrong_type_err.vv:9:10: error: infix expr: cannot use `int literal` (right expression) as `Aaa`
    7 |     println(1 % [1, 2, 3])
    8 |     a := Aaa{}
    9 |     println(a % 1)
      |             ~~~~~
   10 |     println(1 % a)
   11 |     b := map[string]int{}
vlib/v/checker/tests/mod_op_wrong_type_err.vv:10:10: error: mismatched types `int literal` and `Aaa`
    8 |     a := Aaa{}
    9 |     println(a % 1)
   10 |     println(1 % a)
      |             ~~~~~
   11 |     b := map[string]int{}
   12 |     println(b % 1)
vlib/v/checker/tests/mod_op_wrong_type_err.vv:10:10: error: infix expr: cannot use `Aaa` (right expression) as `int literal`
    8 |     a := Aaa{}
    9 |     println(a % 1)
   10 |     println(1 % a)
      |             ~~~~~
   11 |     b := map[string]int{}
   12 |     println(b % 1)
vlib/v/checker/tests/mod_op_wrong_type_err.vv:12:10: error: mismatched types `map[string]int` and `int literal`
   10 |     println(1 % a)
   11 |     b := map[string]int{}
   12 |     println(b % 1)
      |             ~~~~~
   13 |     println(1 % b)
   14 | }
vlib/v/checker/tests/mod_op_wrong_type_err.vv:12:10: error: infix expr: cannot use `int literal` (right expression) as `map[string]int`
   10 |     println(1 % a)
   11 |     b := map[string]int{}
   12 |     println(b % 1)
      |             ~~~~~
   13 |     println(1 % b)
   14 | }
vlib/v/checker/tests/mod_op_wrong_type_err.vv:13:10: error: mismatched types `int literal` and `map[string]int`
   11 |     b := map[string]int{}
   12 |     println(b % 1)
   13 |     println(1 % b)
      |             ~~~~~
   14 | }
vlib/v/checker/tests/mod_op_wrong_type_err.vv:13:10: error: infix expr: cannot use `map[string]int` (right expression) as `int literal`
   11 |     b := map[string]int{}
   12 |     println(b % 1)
   13 |     println(1 % b)
      |             ~~~~~
   14 | }
